ADDED /admin and user count VW

--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -10,9 +10,9 @@
                 <div class="page-content">
                     <div class="inner-box">
                         <div class="dashboard-wrapper">
-                          Total Users: N<br />
-                          New this month: N<br />
-                          New today: N<br />
+                          <p>Total Users: <%= @total %></p>
+                          <p>New this month: <%= @month %></p>
+                          <p>New today: <%= @today %></p>
                         </div>
                     </div>
                 </div>
