MOVED Apple touch icon from assets/images to root of public/ with the other mobile device images.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <!-- Apple PWA -->
     <link rel="manifest" href="//<%= ( ENV["STAGE"] == 'prd' ? 'www' : ENV["STAGE"]) + '.' + ENV["NAME"] + '.com' %>/manifest.json">
-    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <%= render "partials/header_meta" %>
 
