--- a/app/views/listings/partials/_form.erb
+++ b/app/views/listings/partials/_form.erb
@@ -105,24 +105,24 @@
                                         %>
                                     </div>
                                     <div class="form-group mb-3">
-                                        <%= f.label :state %>
+                                        <%= f.label :state %> (Province)
                                         <%= f.text_field :state,
                                             class: "form-control input-md",
                                             required: true,
                                             type: "text",
-                                            maxlength: "2",
-                                            pattern: "[A-Z]{2}",
+                                            maxlength: "32",
+                                            pattern: "[A-Za-z0-9 -]{32}",
                                             placeholder: "Two letter upper case state abbreviation. Exp: FL"
                                         %>
                                     </div>
                                     <div class="form-group mb-3">
-                                        <%= f.label :zipcode %>
+                                        <%= f.label :zipcode %> (Postal Code)
                                         <%= f.text_field :zipcode,
                                             class: "form-control input-md",
                                             required: true,
                                             type: "number",
                                             maxlength: "5",
-                                            pattern: "[0-9]{5}",
+                                            pattern: "[A-Za-z0-9 -]{32}",
                                             placeholder: "exp. 12345"
                                         %>
                                     </div>
