State and Zip now 32 characters.

--- a/app/views/listings/partials/_form.erb
+++ b/app/views/listings/partials/_form.erb
@@ -121,9 +121,9 @@
                                             class: "form-control input-md",
                                             required: true,
                                             type: "number",
-                                            maxlength: "5",
+                                            maxlength: "32",
                                             pattern: "[A-Za-z0-9 -]{32}",
-                                            placeholder: "exp. 12345"
+                                            placeholder: "exp. 12345, ABC-123"
                                         %>
                                     </div>
                                     <div class="form-group mb-3">
